<resources>
    <string name="app_name">Yido</string>

    <!-- Bottom Navigation -->
    <string name="tab_home">홈</string>
    <string name="tab_shop">구매하기</string>
    <string name="tab_wishlist">위시리스트</string>
    <string name="tab_cart">장바구니</string>
    <string name="tab_profile">프로필</string>

    <!-- Home -->
    <string name="home_title">Discover</string>
    <string name="home_date">9월 4일 목요일</string>
    <string name="home_whats_new">What\'s new</string>
    <string name="home_new_products">나이키 최신 상품</string>

    <!-- Shop -->
    <string name="shop_tab_all">전체</string>
    <string name="shop_tab_tops">Tops &amp; T-Shirts</string>
    <string name="shop_tab_sale">sale</string>

    <!-- Wishlist -->
    <string name="wishlist_title">위시리스트</string>

    <!-- Cart -->
    <string name="cart_empty_message">장바구니가 비어 있습니다.\n제품을 추가하면 여기에 표시됩니다.</string>
    <string name="cart_order_button">주문하기</string>

    <!-- Product -->
    <string name="product_image_desc">상품 이미지</string>

    <!-- Profile -->
    <string name="profile_following_list">팔로잉 %d</string>
    <string name="profile_image_desc">프로필 이미지</string>
    <string name="profile_edit_button">프로필 수정</string>
    <string name="profile_menu_order">주문</string>
    <string name="profile_menu_pass">패스</string>
    <string name="profile_menu_event">이벤트</string>
    <string name="profile_menu_settings">설정</string>
    <string name="profile_nike_member_benefits">나이키 멤버 혜택</string>
    <string name="profile_benefits_count">0개 사용 가능</string>
    <string name="profile_edit_following">편집</string>
</resources>
